accessibility for contact pages improved

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -221,10 +221,10 @@
           </div>
         </div>
       </section>
-      <section id="social-medias">
+      <section id="social-medias" aria-labelledby="social-medias-title">
         <div class="container">
           <div class="h2-title">
-            <h2>
+            <h2 id="social-medias-title">
               Contact Me Here...<i
                 class="fa-regular fa-face-smile"
                 aria-hidden="true"
@@ -238,8 +238,9 @@
                   <li>
                     <a
                       href="mailto: draculadycode@gmail.com"
-                      aria-label="Email me"
+                      aria-label="Email me at draculadycode@gmail.com"
                       target="_blank"
+                      rel="noopener noreferrer"
                     >
                       <i
                         class="fa-regular fa-envelope"
@@ -252,7 +253,8 @@
                     <a
                       href="https://www.linkedin.com/in/kathrin-peled-draculady/"
                       target="_blank"
-                      aria-label="LinkedIn profile"
+                      rel="noopener noreferrer"
+                      aria-label="LinkedIn profile of Kathrin Peled, opens in a new tab"
                     >
                       <i
                         class="fa-brands fa-linkedin"
@@ -265,7 +267,8 @@
                     <a
                       href="https://github.com/DraculadyCode"
                       target="_blank"
-                      aria-label="GitHub profile"
+                      rel="noopener noreferrer"
+                      aria-label="GitHub profile of DraculadyCode, opens in a new tab"
                     >
                       <i
                         class="fa-brands fa-github"
@@ -278,7 +281,8 @@
                     <a
                       href="https://t.me/Draculady"
                       target="_blank"
-                      rel="Link to Telegram"
+                      rel="noopener noreferrer"
+                      aria-label="Telegram handle @Draculady, opens in a new tab"
                     >
                       <i
                         class="fab fa-telegram"
@@ -289,7 +293,10 @@
                     </a>
                   </li>
                   <li>
-                    <a href="sms:+4917685639174" aria-label="Send SMS">
+                    <a
+                      href="sms:+4917685639174"
+                      aria-label="Send SMS to +4917685639174"
+                    >
                       <i
                         class="fa-regular fa-comment-alt"
                         aria-hidden="true"
@@ -301,7 +308,8 @@
                     <a
                       href="https://www.facebook.com/profile.php?id=61563925780935"
                       target="_blank"
-                      aria-label="facebook page"
+                      rel="noopener noreferrer"
+                      aria-label="Facebook profile of Kathrin Peled, opens in a new tab"
                     >
                       <i
                         class="fa-brands fa-facebook"
@@ -314,7 +322,8 @@
                     <a
                       href="https://x.com/DraculadyKath"
                       target="_blank"
-                      aria-label="Twitter X page"
+                      rel="noopener noreferrer"
+                      aria-label="Twitter X page of DraculadyKath, opens in a new tab"
                     >
                       <i
                         class="fa-brands fa-x-twitter"
@@ -327,7 +336,8 @@
                     <a
                       href="https://app.netlify.com/teams/draculadycode/sites"
                       target="_blank"
-                      aria-label="Netlify page"
+                      rel="noopener noreferrer"
+                      aria-label="Netlify page of DraculadyCode, opens in a new tab"
                     >
                       <i
                         class="bx bxl-netlify"
@@ -341,7 +351,8 @@
                     <a
                       href="https://vercel.com/kathrins-projects-926c884c"
                       target="_blank"
-                      aria-label="Vercel page"
+                      rel="noopener noreferrer"
+                      aria-label="Vercel page of Kathrin's projects, opens in a new tab"
                     >
                       <i
                         class="bx bxs-up-arrow"
@@ -355,7 +366,8 @@
                     <a
                       href="https://github.com/KathrinKath"
                       target="_blank"
-                      aria-label="GitHub Student page"
+                      rel="noopener noreferrer"
+                      aria-label="GitHub Student profile of Kathrin Kath, opens in a new tab"
                     >
                       <i
                         class="fa-brands fa-square-github"
