--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -227,10 +227,10 @@
           </div>
         </div>
       </section>
-      <section id="social-medias">
+      <section id="social-medias" aria-labelledby="social-medias-title">
         <div class="container">
           <div class="h2-title">
-            <h2>
+            <h2 id="social-medias-title">
               Kontaktiere mich hier...<i
                 class="fa-regular fa-face-smile"
                 aria-hidden="true"
@@ -244,8 +244,9 @@
                   <li>
                     <a
                       href="mailto: draculadycode@gmail.com"
-                      aria-label="Email me"
+                      aria-label="Email me at draculadycode@gmail.com"
                       target="_blank"
+                      rel="noopener noreferrer"
                     >
                       <i
                         class="fa-regular fa-envelope"
@@ -258,7 +259,8 @@
                     <a
                       href="https://www.linkedin.com/in/kathrin-peled-draculady/"
                       target="_blank"
-                      aria-label="LinkedIn profile"
+                      rel="noopener noreferrer"
+                      aria-label="LinkedIn profile of Kathrin Peled, opens in a new tab"
                     >
                       <i
                         class="fa-brands fa-linkedin"
@@ -271,7 +273,8 @@
                     <a
                       href="https://github.com/DraculadyCode"
                       target="_blank"
-                      aria-label="GitHub profile"
+                      rel="noopener noreferrer"
+                      aria-label="GitHub profile of DraculadyCode, opens in a new tab"
                     >
                       <i
                         class="fa-brands fa-github"
@@ -284,7 +287,8 @@
                     <a
                       href="https://t.me/Draculady"
                       target="_blank"
-                      rel="Link to Telegram"
+                      rel="noopener noreferrer"
+                      aria-label="Telegram handle @Draculady, opens in a new tab"
                     >
                       <i
                         class="fab fa-telegram"
@@ -295,7 +299,10 @@
                     </a>
                   </li>
                   <li>
-                    <a href="sms:+4917685639174" aria-label="Send SMS">
+                    <a
+                      href="sms:+4917685639174"
+                      aria-label="Send SMS to +4917685639174"
+                    >
                       <i
                         class="fa-regular fa-comment-alt"
                         aria-hidden="true"
@@ -307,7 +314,8 @@
                     <a
                       href="https://www.facebook.com/profile.php?id=61563925780935"
                       target="_blank"
-                      aria-label="facebook page"
+                      rel="noopener noreferrer"
+                      aria-label="Facebook profile of Kathrin Peled, opens in a new tab"
                     >
                       <i
                         class="fa-brands fa-facebook"
@@ -320,7 +328,8 @@
                     <a
                       href="https://x.com/DraculadyKath"
                       target="_blank"
-                      aria-label="Twitter X page"
+                      rel="noopener noreferrer"
+                      aria-label="Twitter X page of DraculadyKath, opens in a new tab"
                     >
                       <i
                         class="fa-brands fa-x-twitter"
@@ -333,7 +342,8 @@
                     <a
                       href="https://app.netlify.com/teams/draculadycode/sites"
                       target="_blank"
-                      aria-label="Netlify page"
+                      rel="noopener noreferrer"
+                      aria-label="Netlify page of DraculadyCode, opens in a new tab"
                     >
                       <i
                         class="bx bxl-netlify"
@@ -347,7 +357,8 @@
                     <a
                       href="https://vercel.com/kathrins-projects-926c884c"
                       target="_blank"
-                      aria-label="Vercel page"
+                      rel="noopener noreferrer"
+                      aria-label="Vercel page of Kathrin's projects, opens in a new tab"
                     >
                       <i
                         class="bx bxs-up-arrow"
@@ -361,7 +372,8 @@
                     <a
                       href="https://github.com/KathrinKath"
                       target="_blank"
-                      aria-label="GitHub Student page"
+                      rel="noopener noreferrer"
+                      aria-label="GitHub Student profile of Kathrin Kath, opens in a new tab"
                     >
                       <i
                         class="fa-brands fa-square-github"
