accessibility for contact pages improved

--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -372,11 +372,7 @@
                 >1</span
               >
               <!-- next button -->
-              <span
-                class="nextprev-btn"
-                data-page="turn-1"
-                aria-label="Next page"
-              >
+              <span class="nextprev-btn" data-page="turn-1">
                 <i class="bx bx-chevron-right" aria-hidden="true"></i>
               </span>
             </div>
@@ -456,11 +452,7 @@
                 >2</span
               >
               <!-- prev button -->
-              <span
-                class="nextprev-btn back"
-                data-page="turn-1"
-                aria-label="Previous page"
-              >
+              <span class="nextprev-btn back" data-page="turn-1">
                 <i class="bx bx-chevron-left" aria-hidden="true"></i>
               </span>
             </div>
@@ -572,11 +564,7 @@
               <span class="number-page" aria-label="Page 3 of the resume"
                 >3</span
               >
-              <span
-                class="nextprev-btn"
-                data-page="turn-2"
-                aria-label="Next page"
-              >
+              <span class="nextprev-btn" data-page="turn-2">
                 <i class="bx bx-chevron-right" aria-hidden="true"></i>
               </span>
             </div>
@@ -679,11 +667,7 @@
               <span class="number-page" aria-label="Page 4 of the resume"
                 >4</span
               >
-              <span
-                class="nextprev-btn back"
-                data-page="turn-2"
-                aria-label="Previous page"
-              >
+              <span class="nextprev-btn back" data-page="turn-2">
                 <i class="bx bx-chevron-left" aria-hidden="true"></i>
               </span>
             </div>
@@ -766,11 +750,7 @@
               <span class="number-page" aria-label="Page 5 of the resume"
                 >5</span
               >
-              <span
-                class="nextprev-btn"
-                data-page="turn-3"
-                aria-label="Next page"
-              >
+              <span class="nextprev-btn" data-page="turn-3">
                 <i class="bx bx-chevron-right" aria-hidden="true"></i>
               </span>
             </div>
@@ -798,7 +778,6 @@
                     placeholder="Email Address"
                     required
                     aria-label="Email Address"
-
                   />
                   <textarea
                     name="message"
@@ -808,19 +787,19 @@
                     placeholder="Your Message"
                     required
                     aria-label="Your Message"
-
                   ></textarea>
-                  <input type="submit" class="btn" value="Send Message" aria-label="Send your message"/>
+                  <input
+                    type="submit"
+                    class="btn"
+                    value="Send Message"
+                    aria-label="Send your message"
+                  />
                 </form>
               </div>
               <span class="number-page" aria-label="Page 6 of the resume"
                 >6</span
               >
-              <span
-                class="nextprev-btn back"
-                data-page="turn-3"
-                aria-label="Previous page"
-              >
+              <span class="nextprev-btn back" data-page="turn-3">
                 <i class="bx bx-chevron-left" aria-hidden="true"></i>
               </span>
               <a href="#profile-page" class="back-profile"
