--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -96,7 +96,10 @@
         <div class="icon-top-draculady">
           <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
         </div>
-        <h1 data-text="Kathrin Peled">Kathrin Peled</h1>
+        <h1 data-text="Kathrin Peled">
+          Kathrin Peled <br />
+          Web Developer
+        </h1>
         <nav>
           <ul>
             <li class="dropdown">
