--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -92,7 +92,10 @@
         <div class="icon-top-draculady">
           <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
         </div>
-        <h1 data-text="Kathrin Peled">Kathrin Peled</h1>
+        <h1 data-text="Kathrin Peled">
+          Kathrin Peled <br />
+          Web Developer
+        </h1>
         <nav>
           <ul>
             <li class="dropdown">
@@ -383,10 +386,7 @@
                 >1</span
               >
               <!-- next button -->
-              <span
-                class="nextprev-btn"
-                data-page="turn-1"
-              >
+              <span class="nextprev-btn" data-page="turn-1">
                 <i class="bx bx-chevron-right" aria-hidden="true"></i>
               </span>
             </div>
@@ -466,10 +466,7 @@
                 >2</span
               >
               <!-- prev button -->
-              <span
-                class="nextprev-btn back"
-                data-page="turn-1"
-              >
+              <span class="nextprev-btn back" data-page="turn-1">
                 <i class="bx bx-chevron-left" aria-hidden="true"></i>
               </span>
             </div>
@@ -579,10 +576,7 @@
               <span class="number-page" aria-label="Page 3 of the resume"
                 >3</span
               >
-              <span
-                class="nextprev-btn"
-                data-page="turn-2"
-              >
+              <span class="nextprev-btn" data-page="turn-2">
                 <i class="bx bx-chevron-right" aria-hidden="true"></i>
               </span>
             </div>
@@ -685,10 +679,7 @@
               <span class="number-page" aria-label="Page 4 of the resume"
                 >4</span
               >
-              <span
-                class="nextprev-btn back"
-                data-page="turn-2"
-              >
+              <span class="nextprev-btn back" data-page="turn-2">
                 <i class="bx bx-chevron-left" aria-hidden="true"></i>
               </span>
             </div>
@@ -771,10 +762,7 @@
               <span class="number-page" aria-label="Page 5 of the resume"
                 >5</span
               >
-              <span
-                class="nextprev-btn"
-                data-page="turn-3"
-              >
+              <span class="nextprev-btn" data-page="turn-3">
                 <i class="bx bx-chevron-right" aria-hidden="true"></i>
               </span>
             </div>
@@ -823,10 +811,7 @@
               <span class="number-page" aria-label="Page 6 of the resume"
                 >6</span
               >
-              <span
-                class="nextprev-btn back"
-                data-page="turn-3"
-              >
+              <span class="nextprev-btn back" data-page="turn-3">
                 <i class="bx bx-chevron-left" aria-hidden="true"></i>
               </span>
               <a href="#profile-page" class="back-profile"
