--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -92,7 +92,10 @@
         <div class="icon-top-draculady">
           <img src="../Icons/Draculady-icon.webp" alt="Draculady code logo" />
         </div>
-        <h1 data-text="Kathrin Peled">Kathrin Peled</h1>
+        <h1 data-text="Kathrin Peled">
+          Kathrin Peled <br />
+          Web Developer
+        </h1>
         <nav>
           <ul>
             <li class="dropdown">
@@ -691,7 +694,6 @@
                 placeholder="Email Address"
                 required
                 aria-label="Email Address"
-
               />
               <textarea
                 name="message"
@@ -701,9 +703,13 @@
                 placeholder="Your Message"
                 required
                 aria-label="Your Message"
-
               ></textarea>
-              <input type="submit" class="btn" value="Send Message" aria-label="Send your message"/>
+              <input
+                type="submit"
+                class="btn"
+                value="Send Message"
+                aria-label="Send your message"
+              />
             </form>
           </div>
           <span class="number-page" aria-label="Page 6 of the resume">6</span>
