--- a/index-german.html
+++ b/index-german.html
@@ -93,7 +93,10 @@
         <div class="icon-top-draculady">
           <img src="./Icons/Draculady-icon.webp" alt="Draculady code logo" />
         </div>
-        <h1 data-text="Kathrin Peled">Kathrin Peled</h1>
+        <h1 data-text="Kathrin Peled">
+          Kathrin Peled <br />
+          Web Developer
+        </h1>
         <nav>
           <ul>
             <li class="dropdown">
@@ -336,7 +339,11 @@
               >
                 <i class="fa-solid fa-chevron-left" aria-hidden="true"></i>
               </button>
-              <button class="carousel-control next" aria-label="Next slide" onclick="moveSlide(1)">
+              <button
+                class="carousel-control next"
+                aria-label="Next slide"
+                onclick="moveSlide(1)"
+              >
                 <i class="fa-solid fa-chevron-right" aria-hidden="true"></i>
               </button>
             </div>
