--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
             alt="Draculady code logo for mobile"
           />
         </div>
-        <h1 data-text="Kathrin Peled">Kathrin Peled</h1>
+        <h1 data-text="Kathrin Peled">
+          Kathrin Peled <br />
+          Web Developer
+        </h1>
         <nav>
           <ul>
             <li class="dropdown">
