changes for apple devices

--- a/index-german.html
+++ b/index-german.html
@@ -6,10 +6,11 @@
       name="description"
       content="Entdecken Sie Kathrin Peleds Portfolio mit ihren Webentwicklungsprojekten. Erfahren Sie mehr über ihren Hintergrund, ihre Fähigkeiten und Kontaktinformationen. Laden Sie ihren Lebenslauf herunter und nehmen Sie Kontakt für Kooperationen auf."
     />
-    <meta
+    <!-- <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    />
+    /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
@@ -86,6 +87,8 @@
       href="./Icons/Draculady-icon.webp"
       type="image/icon type"
     />
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
   <body>
     <header>
