--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
       name="description"
       content="Explore Kathrin Peled's portfolio showcasing her web development projects. Learn about her background, skills, and contact information. Download her resume and get in touch for collaborations."
     />
-    <meta
+    <!-- <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=5"
-    />
+    /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="keywords"
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
@@ -90,6 +91,8 @@
       href="./Icons/Draculady-icon.webp"
       type="image/icon type"
     />
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
   <body>
     <header>
