changing skills and tools - markdown

--- a/index-german.html
+++ b/index-german.html
@@ -214,8 +214,8 @@
                 Deutschkurs auf C1-Niveau.</span
               >
               <br />
-              Ich wohne in Berlin und werde mein Studium im Februar 2025
-              abschließen. <br />
+              Ich wohne in Berlin und werde mein Studium als Webentwicklerin im
+              Februar 2025 abschließen. <br />
 
               Ich habe eine große Leidenschaft für Front-End-Entwicklung und
               Design und freue mich darauf, in diesem Bereich meine Karriere zu
@@ -492,12 +492,6 @@
             </div>
             <div class="skill">
               <div>
-                <i class="fa-brands fa-markdown" aria-hidden="true"></i>
-              </div>
-              <div><p>Markdown</p></div>
-            </div>
-            <div class="skill">
-              <div>
                 <i
                   class="fa-brands fa-sass"
                   title="Sass"
@@ -540,6 +534,12 @@
             <div class="tool">
               <div><i class="fa-solid fa-terminal" aria-hidden="true"></i></div>
               <div><p>Command Line</p></div>
+            </div>
+            <div class="tool">
+              <div>
+                <i class="fa-brands fa-markdown" aria-hidden="true"></i>
+              </div>
+              <div><p>Markdown</p></div>
             </div>
             <div class="tool">
               <div><i class="fa-brands fa-linux" aria-hidden="true"></i></div>
