--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                 language course at the C1 level.</span
               >
               <br />
-              I am based in Berlin, I am set to complete my studies in February
-              2025.
+              I am based in Berlin, I am set to complete my studies as a web
+              developer in February 2025.
               <br />
               I have a strong passion for front-end development and design and
               am eager to start my career in this field. <br />
@@ -493,12 +493,6 @@
             </div>
             <div class="skill">
               <div>
-                <i class="fa-brands fa-markdown" aria-hidden="true"></i>
-              </div>
-              <div><p>Markdown</p></div>
-            </div>
-            <div class="skill">
-              <div>
                 <i
                   class="fa-brands fa-sass"
                   title="Sass"
@@ -541,6 +535,12 @@
             <div class="tool">
               <div><i class="fa-solid fa-terminal" aria-hidden="true"></i></div>
               <div><p>Command Line</p></div>
+            </div>
+            <div class="tool">
+              <div>
+                <i class="fa-brands fa-markdown" aria-hidden="true"></i>
+              </div>
+              <div><p>Markdown</p></div>
             </div>
             <div class="tool">
               <div><i class="fa-brands fa-linux" aria-hidden="true"></i></div>
