adding tools to pages

--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -758,6 +758,9 @@
                       ><i class="bx bxl-figma" aria-hidden="true"></i
                       >Figma</span
                     >
+                    <span>
+                      <i class="fa-solid fa-paintbrush" aria-hidden="true"></i>Picsart
+                    </span>
                   </div>
                 </div>
               </div>
