--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -682,6 +682,10 @@
                 <span
                   ><i class="bx bxl-figma" aria-hidden="true"></i>Figma</span
                 >
+                <span>
+                  <i class="fa-solid fa-paintbrush" aria-hidden="true"></i
+                  >Picsart
+                </span>
               </div>
             </div>
           </div>
