--- a/index.html
+++ b/index.html
@@ -562,6 +562,16 @@
               <div><i class="fa-brands fa-npm" aria-hidden="true"></i></div>
               <div><p>NPM</p></div>
             </div>
+            <div class="tool">
+              <div>
+                <i class="fa-solid fa-paintbrush" aria-hidden="true"></i>
+              </div>
+              <div><p>Picsart</p></div>
+            </div>
+            <div class="tool">
+              <div><i class="fa-brands fa-figma" aria-hidden="true"></i></div>
+              <div>Figma</div>
+            </div>
           </div>
         </div>
       </section>
