adding tools to pages

--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -322,7 +322,7 @@
                     rel="noopener noreferrer"
                     aria-label="Visit the Teleperformance job listing page for user-generated content moderation roles"
                   >
-                    >Reviewed user-generated content</a
+                    Reviewed user-generated content</a
                   >
                   on social media platforms in Hebrew and English, ensuring
                   compliance with policies and guidelines, and took action on
