--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -331,7 +331,7 @@
                     rel="noopener noreferrer"
                     aria-label="Visit the Teleperformance job listing page for user-generated content moderation roles"
                   >
-                    >nutzergenerierte Inhalte</a
+                    nutzergenerierte Inhalte</a
                   >
                   auf sozialen Medien in Hebräisch und Englisch, um die
                   Einhaltung von Richtlinien und Vorgaben sicherzustellen, und
