--- a/Projects/Animation small projects 2/index.html
+++ b/Projects/Animation small projects 2/index.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <!-- Style the Footer only -->
+    <style>
+      footer {
+        background-color: #a009f7;
+        color: white;
+        font-size: 1.5rem;
+        font-family: cursive;
+        text-align: center;
+        padding: 0.5rem;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        border-top: 0.5rem outset rgb(55, 173, 252);
+      }
+      footer p {
+        width: 100%;
+      }
+      footer a {
+        color: white;
+        text-decoration: none;
+      }
+
+      footer a:hover {
+        text-decoration: underline;
+      }
+    </style>
     <title>Caption This</title>
   </head>
   <body>
@@ -12,5 +38,19 @@
       <p>You Can Write Anything Here!</p>
     </div>
     <div class="picture"><img src="./images/image .webp" alt="image" /></div>
+
+    <footer>
+      <p>
+        Created by
+        <span
+          ><a
+            href="https://draculady.de/"
+            target="_blank"
+            title="Visit Draculady's website"
+            ><b>Kathrin Peled - Draculady</b></a
+          >©</span
+        >
+      </p>
+    </footer>
   </body>
 </html>
