--- a/Projects/Build a blog/index.html
+++ b/Projects/Build a blog/index.html
@@ -5,6 +5,32 @@
     <meta name="author" content="Kathrin Peled" />
     <title id="Homepage">My Blog - Fancy Rats</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Style the Footer only -->
+    <style>
+      footer {
+        background-color: #a009f7;
+        color: white;
+        font-size: 1.5rem;
+        font-family: cursive;
+        text-align: center;
+        padding: 0.5rem;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        border-top: 0.5rem outset rgb(55, 173, 252);
+      }
+      footer p {
+        width: 100%;
+      }
+      footer a {
+        color: white;
+        text-decoration: none;
+      }
+
+      footer a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
   <body>
     <section id="mainsection">
@@ -97,5 +123,19 @@
 
       <a href="#mainsection">Back to top</a>
     </section>
+
+    <footer>
+      <p>
+        Created by
+        <span
+          ><a
+            href="https://draculady.de/"
+            target="_blank"
+            title="Visit Draculady's website"
+            ><b>Kathrin Peled - Draculady</b></a
+          >©</span
+        >
+      </p>
+    </footer>
   </body>
 </html>
