adding linked footer to projects -1

--- a/Projects/Crazy-Cow/index.html
+++ b/Projects/Crazy-Cow/index.html
@@ -21,6 +21,31 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://draculady-k.github.io/Crazy-Cow/" />
     <link rel="stylesheet" href="styles.css" />
+    <!-- Style the Footer only -->
+    <style>
+      footer {
+        background-color: #a009f7;
+        color: white;
+        font-size: 1.5rem;
+        font-family: cursive;
+        text-align: center;
+        padding: 0.5rem;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        border-top: 0.5rem outset rgb(55, 173, 252);
+      }
+      footer p {
+        width: 100%;
+      }
+      footer a {
+        color: white;
+        text-decoration: none;
+      }
+      footer a:hover {
+        text-decoration: underline;
+      }
+    </style>
     <!-- <script>
       document.addEventListener("DOMContentLoaded", function () {
         function playNormalCowSound() {
@@ -208,12 +233,17 @@
       ></audio>
     </main>
     <footer>
-      <div class="footer-div">
-        <a href="https://draculadycode.github.io/My-Portfolio/" target="_blank">
-          <p>Powered by <strong>Draculady</strong></p></a
+      <p>
+        Created by
+        <span
+          ><a
+            href="https://draculady.de/"
+            target="_blank"
+            title="Visit Draculady's website"
+            ><b>Kathrin Peled - Draculady</b></a
+          >©</span
         >
-      </div>
+      </p>
     </footer>
-   
   </body>
 </html>
