--- a/Projects/Guess the color/index.html
+++ b/Projects/Guess the color/index.html
@@ -7,6 +7,31 @@
       rel="stylesheet"
       type="text/css"
     />
+    <!-- Style the Footer only -->
+    <style>
+      footer {
+        background-color: #a009f7;
+        color: white;
+        font-size: 1.5rem;
+        font-family: cursive;
+        text-align: center;
+        padding: 0.5rem;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        border-top: 0.5rem outset rgb(55, 173, 252);
+      }
+      footer p {
+        width: 100%;
+      }
+      footer a {
+        color: white;
+        text-decoration: none;
+      }
+      footer a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
   <body>
     <h1>The Great <span id="color-display">RGB</span> Guessing Game</h1>
@@ -24,6 +49,19 @@
       <div class="square"></div>
       <div class="square"></div>
     </div>
+    <footer>
+      <p>
+        Created by
+        <span
+          ><a
+            href="https://draculady.de/"
+            target="_blank"
+            title="Visit Draculady's website"
+            ><b>Kathrin Peled - Draculady</b></a
+          >©</span
+        >
+      </p>
+    </footer>
 
     <script type="text/javascript" src="script.js"></script>
   </body>
