--- a/Projects/Sweet spot responsive single page blog/index.html
+++ b/Projects/Sweet spot responsive single page blog/index.html
@@ -25,6 +25,31 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <!-- Style the Footer only -->
+    <style>
+      .footer {
+        background-color: #a009f7;
+        color: white;
+        font-size: 1.5rem;
+        font-family: cursive;
+        text-align: center;
+        padding: 0.5rem;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        border-top: 0.5rem outset rgb(55, 173, 252);
+      }
+      .footer p {
+        width: 100%;
+      }
+      .footer a {
+        color: white;
+        text-decoration: none;
+      }
+      .footer a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
 
   <body>
@@ -189,5 +214,18 @@
     <footer>
       <h3 id="contact"><a href="contact.html">Drop me a line!</a></h3>
     </footer>
+    <div class="footer">
+      <p>
+        Created by
+        <span
+          ><a
+            href="https://draculady.de/"
+            target="_blank"
+            title="Visit Draculady's website"
+            ><b>Kathrin Peled - Draculady</b></a
+          >©</span
+        >
+      </p>
+    </div>
   </body>
 </html>
