--- a/Projects/DOM-Travel/index.html
+++ b/Projects/DOM-Travel/index.html
@@ -5,6 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./main.css" />
+    <!-- Style the Footer only -->
+    <style>
+      footer {
+        background-color: #a009f7;
+        color: white;
+        font-size: 1.5rem;
+        font-family: cursive;
+        text-align: center;
+        padding: 0.5rem;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        border-top: 0.5rem outset rgb(55, 173, 252);
+      }
+      footer p {
+        width: 100%;
+      }
+      footer a {
+        color: white;
+        text-decoration: none;
+      }
+      footer a:hover {
+        text-decoration: underline;
+      }
+    </style>
     <title>Extreme Travel</title>
   </head>
 
@@ -56,7 +81,7 @@
       </section>
     </section>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <ul class="links">
         <li class="link"><a href="#">Twitter</a></li>
         <li class="link"><a href="#">Facebook</a></li>
@@ -64,6 +89,19 @@
       </ul>
 
       <ul class="site-map"></ul>
+    </footer> -->
+    <footer>
+      <p>
+        Created by
+        <span
+          ><a
+            href="https://draculady.de/"
+            target="_blank"
+            title="Visit Draculady's website"
+            ><b>Kathrin Peled - Draculady</b></a
+          >©</span
+        >
+      </p>
     </footer>
 
     <script src="./script.js"></script>
