--- a/Projects/Flexboxes responsive/Index.html
+++ b/Projects/Flexboxes responsive/Index.html
@@ -4,7 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="Kathrin" content="width=device-width, initial-scale=1.0" />
     <title>Facts about Germany</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <!-- Style the Footer only -->
+    <style>
+      footer {
+        background-color: #a009f7;
+        color: white;
+        font-size: 1.5rem;
+        font-family: cursive;
+        text-align: center;
+        padding: 0.5rem;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        border-top: 0.5rem outset rgb(55, 173, 252);
+      }
+      footer p {
+        width: 100%;
+      }
+      footer a {
+        color: white;
+        text-decoration: none;
+      }
+      footer a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
   <body>
     <h1>Intresting facts about Germany</h1>
@@ -44,11 +69,26 @@
       </p>
       <h2>How many people move to Germany every year?</h2>
       <p>
-        Germany is the second most popular destination for expats in the world.<br>
+        Germany is the second most popular destination for expats in the
+        world.<br />
         In 2019, 1,558,612 people moved to Germany and around 400,00 of these
-        people were students.<br> At CBS, around 20% of our students are
-        international students from across the world.
+        people were students.<br />
+        At CBS, around 20% of our students are international students from
+        across the world.
       </p>
     </section>
+    <footer>
+      <p>
+        Created by
+        <span
+          ><a
+            href="https://draculady.de/"
+            target="_blank"
+            title="Visit Draculady's website"
+            ><b>Kathrin Peled - Draculady</b></a
+          >©</span
+        >
+      </p>
+    </footer>
   </body>
 </html>
