--- a/Projects/Pokemon Project/index.html
+++ b/Projects/Pokemon Project/index.html
@@ -13,6 +13,31 @@
     <title>Pokemon Cards</title>
     <link rel="icon" href="./pikachu.webp" type="image/icon type" />
     <link rel="stylesheet" href="./style.css" />
+    <!-- Style the Footer only -->
+    <style>
+      footer {
+        background-color: #a009f7;
+        color: white;
+        font-size: 1.5rem;
+        font-family: cursive;
+        text-align: center;
+        padding: 0.5rem;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        border-top: 0.5rem outset rgb(55, 173, 252);
+      }
+      footer p {
+        width: 100%;
+      }
+      footer a {
+        color: white;
+        text-decoration: none;
+      }
+      footer a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
   <body>
     <div class="main-container">
@@ -65,6 +90,19 @@
         </div>
       </div>
     </div>
+    <footer>
+      <p>
+        Created by
+        <span
+          ><a
+            href="https://draculady.de/"
+            target="_blank"
+            title="Visit Draculady's website"
+            ><b>Kathrin Peled - Draculady</b></a
+          >©</span
+        >
+      </p>
+    </footer>
     <script src="main-1.js"></script>
   </body>
 </html>
