--- a/Projects/Table/index.html
+++ b/Projects/Table/index.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="author" content="Kathrin Peled" />
     <link rel="stylesheet" href="main.css" />
-
+    <!-- Style the Footer only -->
+    <style>
+      footer {
+        background-color: #a009f7;
+        color: white;
+        font-size: 1.5rem;
+        font-family: cursive;
+        text-align: center;
+        padding: 0.5rem;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        border-top: 0.5rem outset rgb(55, 173, 252);
+      }
+      footer p {
+        width: 100%;
+      }
+      footer a {
+        color: white;
+        text-decoration: none;
+      }
+      footer a:hover {
+        text-decoration: underline;
+      }
+    </style>
     <title>Basic Data Exercises</title>
   </head>
   <body>
@@ -50,5 +74,19 @@
         </tr>
       </tbody>
     </table>
+
+    <footer>
+      <p>
+        Created by
+        <span
+          ><a
+            href="https://draculady.de/"
+            target="_blank"
+            title="Visit Draculady's website"
+            ><b>Kathrin Peled - Draculady</b></a
+          >©</span
+        >
+      </p>
+    </footer>
   </body>
 </html>
