--- a/Projects/Uriya-Peled-Pivate-Teacher/index.html
+++ b/Projects/Uriya-Peled-Pivate-Teacher/index.html
@@ -39,6 +39,31 @@
       href="./Logo_Icons/Uriya-Peled-logo.webp"
       type="image/icon type"
     />
+    <!-- Style the Footer only -->
+    <style>
+      .footer {
+        background-color: #a009f7;
+        color: white;
+        font-size: 1.5rem;
+        font-family: cursive;
+        text-align: center;
+        padding: 0.5rem;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        border-top: 0.5rem outset rgb(55, 173, 252);
+      }
+      .footer p {
+        width: 100%;
+      }
+      .footer a {
+        color: white;
+        text-decoration: none;
+      }
+      .footer a:hover {
+        text-decoration: underline;
+      }
+    </style>
     <!-- Google tag (gtag.js) -->
     <script
       async
@@ -295,6 +320,19 @@
         </div>
       </div>
     </footer>
+    <div class="footer">
+      <p>
+        Created by
+        <span
+          ><a
+            href="https://draculady.de/"
+            target="_blank"
+            title="Visit Draculady's website"
+            ><b>Kathrin Peled - Draculady</b></a
+          >©</span
+        >
+      </p>
+    </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"
       integrity="sha512-Z4PO8UnkxMvE8pT0KxO4u12HPWeUk2o4RLq8ZDhb9U+7gHjEpQfL4Zq3fYCBw9MtkHHtNBz5TgXNwFSHDBsU3w=="
