--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Explore Kathrin Peled's portfolio showcasing her web development projects. Learn about her background, skills, and contact information. Download her resume and get in touch for collaborations."
+      content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Erfahren Sie mehr über ihren Hintergrund, Fähigkeiten und Kontaktmöglichkeiten. Lebenslauf herunterladen und für Kooperationen in Kontakt treten."
     />
     <!-- <meta
       name="viewport"
