--- a/index-german.html
+++ b/index-german.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Entdecken Sie Kathrin Peleds Portfolio mit ihren Webentwicklungsprojekten. Erfahren Sie mehr über ihren Hintergrund, ihre Fähigkeiten und Kontaktinformationen. Laden Sie ihren Lebenslauf herunter und nehmen Sie Kontakt für Kooperationen auf."
+      content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Erfahren Sie mehr über ihren Hintergrund, Fähigkeiten und Kontaktmöglichkeiten. Lebenslauf herunterladen und für Kooperationen in Kontakt treten."
     />
     <!-- <meta
       name="viewport"
@@ -562,7 +562,9 @@
               <div><p>NPM</p></div>
             </div>
             <div class="tool">
-              <div><i class="fa-solid fa-paintbrush" aria-hidden="true"></i></div>
+              <div>
+                <i class="fa-solid fa-paintbrush" aria-hidden="true"></i>
+              </div>
               <div><p>Picsart</p></div>
             </div>
             <div class="tool">
