--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Entdecken Sie Kathrin Peleds Portfolio mit ihren Webentwicklungsprojekten. Erfahren Sie mehr über ihren Hintergrund, ihre Fähigkeiten und Kontaktinformationen. Laden Sie ihren Lebenslauf herunter und nehmen Sie Kontakt für Kooperationen auf."
+      content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Erfahren Sie mehr über ihren Hintergrund, Fähigkeiten und Kontaktmöglichkeiten. Lebenslauf herunterladen und für Kooperationen in Kontakt treten."
     />
     <!-- <meta
       name="viewport"
