updting meta descriptions

--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta
-      name="description"
-      content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Erfahren Sie mehr über ihren Hintergrund, Fähigkeiten und Kontaktmöglichkeiten. Lebenslauf herunterladen und für Kooperationen in Kontakt treten."
-    />
+    name="description"
+    content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
+  />
     <!-- <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=5"
