--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Learn about her background, download her resume, and contact her for collaborations."
+      content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
     />
     <!-- <meta
       name="viewport"
