--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Erfahren Sie mehr über ihren Hintergrund, Fähigkeiten und Kontaktmöglichkeiten. Lebenslauf herunterladen und für Kooperationen in Kontakt treten."
+      content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
     />
     <!-- <meta
       name="viewport"
