--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -24,6 +24,66 @@
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
+    <link
+      rel="alternate"
+      href="https://draculady.de/index.html"
+      hreflang="en-US"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/index-german.html"
+      hreflang="de-DE"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/contact-english.html"
+      hreflang="en-US"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/contact-deutsch.html"
+      hreflang="de-DE"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/files-english.html"
+      hreflang="en-US"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/files-german.html"
+      hreflang="de-DE"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/portfolio-english.html"
+      hreflang="en-US"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/portfolio-german.html"
+      hreflang="de-DE"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/resume-english.html"
+      hreflang="en-US"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/resume-german.html"
+      hreflang="de-DE"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/resume-mobile-english.html"
+      hreflang="en-US"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/resume-mobile-german.html"
+      hreflang="de-DE"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
