--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -139,7 +139,7 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <title id="portfolio-english">Kathrin Peled Portfolio</title>
+    <title id="resume-german">Kathrin Peled - Lebenslauf</title>
     <link
       rel="icon"
       href="../Icons/Draculady-icon.webp"
