--- a/index-german.html
+++ b/index-german.html
@@ -141,7 +141,7 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <title id="index-german">Kathrin Peled Portfolio</title>
+    <title id="index-german">Kathrin Peled Portfolio - Startseite</title>
     <link
       rel="icon"
       href="./Icons/Draculady-icon.webp"
