--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       gtag("config", "G-PCYQWXDRBG");
     </script>
     <title id="index-english">
-      Kathrin Peled Portfolio - Web Development Projects
+      Kathrin Peled Portfolio - Homepage
     </title>
     <link
       rel="icon"
