--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -142,7 +142,7 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <title id="portfolio-german">Kathrin Peled Portfolio</title>
+    <title id="files-german">Kathrin Peled Portfolio - Dateien</title>
     <link
       rel="icon"
       href="../Icons/Draculady-icon.webp"
