--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -143,7 +143,7 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <title id="portfolio-english">Kathrin Peled Portfolio</title>
+    <title id="portfolio-english">Kathrin Peled - Portfolio</title>
     <link
       rel="icon"
       href="../Icons/Draculady-icon.webp"
