updting meta descriptions

--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -143,7 +143,7 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <title id="files-english">Kathrin Peled Portfolio - Files</title>
+    <title id="files-english">Kathrin Peled - Files</title>
     <link
       rel="icon"
       href="../Icons/Draculady-icon.webp"
