--- a/index.html
+++ b/index.html
@@ -143,9 +143,7 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <title id="index-english">
-      Kathrin Peled Portfolio - Homepage
-    </title>
+    <title id="index-english">Kathrin Peled's Portfolio - Homepage</title>
     <link
       rel="icon"
       href="./Icons/Draculady-icon.webp"
