--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -142,7 +142,7 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-    <title id="contact-german">Kathrin Peled Portfolio - Kontakt</title>
+    <title id="contact-german">Kathrin Peled - Kontakt</title>
     <link
       rel="icon"
       href="../Icons/Draculady-icon.webp"
